refact: split create and update prize in two endpoints following restfull api aproach
