# app/Http/Responses/ListPrizesByArtistResponse.php
@@ -5,7 +5,7 @@ namespace App\Http\Responses;
 
 
 use App\Domain\Prize\Prize;
-use App\Http\Requests\CreateOrUpdatePrizeRequest;
+use App\Http\Requests\CreatePrizeRequest;
 use Illuminate\Support\Collection;
 
 
@@ -14,7 +14,7 @@ class ListPrizesByArtistResponse
     public static function convertToJson(Collection $prizes)
     {
 
-        $t = CreateOrUpdatePrizeResponse::convertToJson($prizes->first());
+        $t = UpdatePrizeResponse::convertToJson($prizes->first());
 
         return [[$t, $t]];
     }
